Kuber/moderation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: lulu960/moderation:latest # Replace with the correct Docker image
          ports:
            - containerPort: 4003
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: moderation
  ports:
    - name: http
      protocol: TCP
      port: 4003
      targetPort: 4003
